# django-sequences

./: .gitignore  LICENSE  Makefile  README.rst  benchmark.py  pyproject.toml  setup.py  tox.ini
sequences/: __init__.py  models.py  test_mysql_settings.py  test_oracle_settings.py  test_postgresql_settings.py  test_settings.py  test_sqlite_settings.py  tests.py
sequences/locale/bg/LC_MESSAGES/: django.po
sequences/locale/cs/LC_MESSAGES/: django.mo
sequences/locale/da/LC_MESSAGES/: django.mo  django.po
sequences/locale/de/LC_MESSAGES/: django.mo  django.po
sequences/locale/es/LC_MESSAGES/: django.po
sequences/locale/it/LC_MESSAGES/: django.mo  django.po
sequences/locale/ja/LC_MESSAGES/: django.mo  django.po
sequences/locale/lt/LC_MESSAGES/: django.po
sequences/locale/nl/LC_MESSAGES/: django.mo  django.po
sequences/locale/pt/LC_MESSAGES/: django.mo
sequences/locale/rm/LC_MESSAGES/: django.mo
sequences/locale/ru/LC_MESSAGES/: django.mo  django.po
sequences/locale/sk/LC_MESSAGES/: django.mo  django.po
sequences/locale/th/LC_MESSAGES/: django.mo
sequences/locale/tr/LC_MESSAGES/: django.mo  django.po
sequences/migrations/: 0001_initial.py
src/sequences/: __init__.py  admin.py  apps.py  models.py
src/sequences/locale/bg/LC_MESSAGES/: django.mo
src/sequences/locale/cs/LC_MESSAGES/: django.po
src/sequences/locale/es/LC_MESSAGES/: django.mo
src/sequences/locale/fr/LC_MESSAGES/: django.mo  django.po
src/sequences/locale/ja/LC_MESSAGES/: django.mo  django.po
src/sequences/locale/lt/LC_MESSAGES/: django.mo
src/sequences/locale/pt/LC_MESSAGES/: django.po
src/sequences/locale/rm/LC_MESSAGES/: django.po
src/sequences/locale/sv/LC_MESSAGES/: django.mo  django.po
src/sequences/locale/th/LC_MESSAGES/: django.po
src/sequences/migrations/: 0001_initial.py  0002_alter_sequence_last.py
tests/: mysql_settings.py  oracle_settings.py  postgresql_settings.py  settings.py  sqlite_settings.py  test_sequences.py
