[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "django-sequences"
version = "2.5"
description = "Generate gapless sequences of integer values."
license = "BSD-3-Clause"
authors = ["Aymeric Augustin <aymeric.augustin@m4x.org>"]
readme = "README.rst"
repository = "https://github.com/aaugustin/django-sequences"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
packages = [
    { include = "sequences", from = "src" },
]

[tool.poetry.dependencies]
django = ">=2.2"
python = "^3.5"

[tool.poetry.dev-dependencies]
cx-Oracle = "*"
mysqlclient = "*"
psycopg2-binary = "*"
