[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry]
name = "django-sequences"
version = "2.8"
description = "Generate gapless sequences of integer values."
license = "BSD-3-Clause"
authors = ["Aymeric Augustin <aymeric.augustin@m4x.org>"]
readme = "README.rst"
repository = "https://github.com/aaugustin/django-sequences"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
packages = [
    { include = "sequences", from = "src" },
]

[tool.poetry.dependencies]
django = ">=3.2"
python = ">=3.6.2"

[tool.poetry.dev-dependencies]
black = "*"
cx-Oracle = "*"
flake8 = "*"
isort = "*"
mysqlclient = "*"
psycopg2-binary = "*"
toml = "*"
