[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-sequences"
version = "3.0"
description = "Generate gapless sequences of integer values."
license = "BSD-3-Clause"
authors = ["Aymeric Augustin <aymeric.augustin@m4x.org>"]
readme = "README.rst"
repository = "https://github.com/aaugustin/django-sequences"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
packages = [
    { include = "sequences", from = "src" },
]

[tool.poetry.dependencies]
django = ">=3.2"
python = ">=3.8"

[tool.poetry.dev-dependencies]
black = "*"
cx-Oracle = "*"
mysqlclient = "*"
psycopg2-binary = "*"
ruff = "*"
toml = "*"

[tool.ruff]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "W",  # pycodestyle
    "I",  # isort
]
src = ["src"]
